# solocoder-5494-rust-ota

./: .env.example  Cargo.toml
migrations/: 001_init.sql  002_device_lifecycle.sql
src/: config.rs  crypto.rs  db.rs  error.rs  main.rs
src/models/: audit_log.rs  device.rs  device_upgrade.rs  firmware.rs  hmac_key.rs  metrics.rs  mod.rs  status_report.rs  upgrade_task.rs
src/routes/: audit.rs  device.rs  download.rs  firmware.rs  metrics.rs  mod.rs  status.rs  upgrade.rs
src/services/: audit_service.rs  failure_monitor.rs  firmware_service.rs  gray_engine.rs  hmac_service.rs  mod.rs
