[package]
name = "ota-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
bytes = "1"
http = "1"
http-body-util = "0.1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
multipart = "0.18"
prometheus = "0.13"
tower-http = { version = "0.5", features = ["cors"] }
rsa = { version = "0.9", features = ["sha2", "pem"] }
